--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,12 @@ body {
 h1 {
   font-size: 40px;
 }
+
+
+
+.wrapper {
+  width: 1200px;
+  margin: 0 auto;
+  min-height: 500px;
+  background-color: #cecece;
+}
